Remove JavaEE library dependencies (break Java9)